[package]
name = "kevlar"
version = "0.1.0"
authors = ["Steve Pryde <steve@stevepryde.com>"]
edition = "2018"
license = "MIT"
homepage = "https://github.com/stevepryde/kevlar"
repository = "https://github.com/stevepryde/kevlar"
keywords = ["test", "harness", "integration", "regression"]
categories = ["development-tools::testing"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
regex = "1"
chrono = "0.4"
log = "0.4"
fern = "0.5"
async-trait = "0.1"
